<resources>
    <string name="app_name">SW2020</string>
    <string name="action_settings">Settings</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="button">Naciśnij</string>
    <string name="witaj">SIEMA SIEMA SIEMA</string>
    <string name="title_activity_window2">Light and Rotation</string>
    <string name="back">Back</string>
    <string name="xAxis">X-Axis Acceleration: </string>
    <string name="yAxis">Y-Axis Acceleration: </string>
    <string name="zAxis">Z-Axis Acceleration: </string>
    <string name="zero">0.0</string>
    <string name="alert1">Couldn\'t find an accelerometer</string>
    <string name="standing">Standing</string>
    <string name="walking">Walking</string>
    <string name="running">Running</string>
    <string name="title_activity_barometer">Barometer and Localisation</string>
    <string name="page1">PAGE 1</string>
    <string name="page2">PAGE 2</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="authors">Jakub Cywiński\nMaja Garkowska\nArkadiusz Remplewicz</string>
    <string name="vibrate">VIBRATE</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="check_localisation">Check Localisation</string>
    <string name="diagnostic">Diagnostic Mode</string>
    <string name="standard">Standard Mode</string>
    <string name="description"><b>Ta aplikacja wykorzystuje dane pobierane z sensorów Twojego telefonu!</b>\n\n\n<u>Page1</u> \nAkcelerometr, Czujnik światła, Wektorowy Sensor Obrotu\n\n<u>Page2</u> \nBarometr, Lokalizator GPS</string>
    <string name="_0_bar">0 bar</string>
    <string name="pressure">Pressure:</string>
    <string name="latitude">Latitude:</string>
    <string name="vector_rotate_sensor_values">Vector Rotate Sensor Values</string>
</resources>