<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:id="@+id/pressure_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/_0_bar"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/pressure_lbl"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pressure_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/pressure"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/latitude_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:text="@string/latitude"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pressure_lbl" />

    <TextView
        android:id="@+id/diagnostic_lbl2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="28dp"
        android:text="@string/diagnostic"
        android:textColor="#FF0000"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/latitude_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:text="0"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/latitude_lbl"
        app:layout_constraintTop_toBottomOf="@+id/pressure_val" />

    <TextView
        android:id="@+id/longitude_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="Longitude:"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/latitude_lbl" />

    <TextView
        android:id="@+id/longitude_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="0"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/longitude_lbl"
        app:layout_constraintTop_toBottomOf="@+id/latitude_val" />

    <Button
        android:id="@+id/localisation_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:onClick="click"
        android:text="@string/check_localisation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/longitude_lbl" />
</androidx.constraintlayout.widget.ConstraintLayout>